--- a/index.html
+++ b/index.html
@@ -195,10 +195,83 @@
   </div>
 
   <div class="grid" id="gameGrid">
-    <!-- Juegos insertados aquí -->
-    <!-- (usa tu misma lista de juegos que ya tienes aquí) -->
-    <!-- ... -->
-  </div>
+ <div class="game">
+      <a href="Slope-Source-code-main/index.html">
+        <img src="Slope-Source-code-main/TemplateData/OIP.ico" alt="Slope">
+        <div class="game-title">Slope</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="Subway-Surfers/index.html">
+        <img src="R.png" alt="Subway Surfers">
+        <div class="game-title">Subway Surfers</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="BurritoBison-main/index.html">
+        <img src="BurritoBison-main/images/burrito-png.png" alt="Burrito Bison">
+        <div class="game-title">Burrito Bison</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="drive-mad-main/index.html">
+        <img src="drive-mad-main/webapp/cover.jpg" alt="Drive Mad">
+        <div class="game-title">Drive Mad</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="1v1lol/">
+        <img src="1v1lol/logo.png" alt="1v1.lol">
+        <div class="game-title">1v1.lol</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="bitlife/index.html">
+        <img src="bitlife/logo.png" alt="Bitlife">
+        <div class="game-title">Bitlife</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="driftboss/index.html">
+        <img src="driftboss/branding/logo1.png" alt="Drift Boss">
+        <div class="game-title">Drift Boss</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="happywheels/index.html">
+        <img src="happywheels/166950-HUdYLFwSkLSLQIwO.png" alt="Happy Wheels">
+        <div class="game-title">Happy Wheels</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="pacman/index.html">
+        <img src="pacman/sejarah-penciptaan-game-legendaris-pac-man-10aXQ8DlD0.jpg" alt="Pacman">
+        <div class="game-title">Pacman</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="skibidi1v100/index.html">
+        <img src="skibidi1v100/logo.png" alt="Skibidi 1v100">
+        <div class="game-title">Skibidi 1v100</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="snowrider3d/index.html">
+        <img src="snowrider3d/snow.png" alt="Snow Rider 3D">
+        <div class="game-title">Snow Rider 3D</div>
+      </a>
+    </div>
+        <div class="game">
+      <a href="volleyrandom/index.html">
+        <img src="volleyrandom/splash.png" alt="Volley Random">
+        <div class="game-title">Volley Random</div>
+      </a>
+    </div>
+  </div> <!-- Fin del contenedor de .grid -->
+
+    </div>
+  </div> <!-- Fin del contenedor de .grid -->
+
 
   <script>
     // Login
