--- a/index.html
+++ b/index.html
@@ -208,6 +208,12 @@
       </a>
     </div>
     <div class="game">
+      <a href="tunnelrush/index.html">
+        <img src="tunnelrush/5.jpg" alt="Tunnel Rush">
+        <div class="game-title">Tunnel Rush</div>
+      </a>
+    </div>
+    <div class="game">
       <a href="BurritoBison-main/index.html">
         <img src="BurritoBison-main/images/burrito-png.png" alt="Burrito Bison">
         <div class="game-title">Burrito Bison</div>
