--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@
         <img src="tunnelrush/5.jpg" alt="Tunnel Rush">
         <div class="game-title">Tunnel Rush</div>
       </a>
+     <div class="game">
+      <a href="paperio2/index.html">
+        <img src="paperio2/images/logo.png" alt="Paper.io">
+        <div class="game-title">Paper.io</div>
+      </a>
     </div>
     <div class="game">
       <a href="BurritoBison-main/index.html">
