--- a/index.html
+++ b/index.html
@@ -259,11 +259,11 @@
         <img src="pacman/sejarah-penciptaan-game-legendaris-pac-man-10aXQ8DlD0.jpg" alt="Pacman">
         <div class="game-title">Pacman</div>
       </a>
-    </div>
-    <div class="game">
-      <a href="skibidi1v100/index.html">
-        <img src="skibidi1v100/logo.png" alt="Skibidi 1v100">
-        <div class="game-title">Skibidi 1v100</div>
+      <div>
+    < <div class="game">
+      <a href="tubejumpers/index.html">
+        <img src="tubejumpers/img/icon.png" alt="Tube Jumpers">
+        <div class="game-title">Tube Jumpers</div>
       </a>
     </div>
     <div class="game">
