--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
         <img src="tunnelrush/5.jpg" alt="Tunnel Rush">
         <div class="game-title">Tunnel Rush</div>
       </a>
+      <div>
      <div class="game">
       <a href="paperio2/index.html">
         <img src="paperio2/images/logo.png" alt="Paper.io">
