--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
   </div>
   <div class="game">
     <a href="tubejumpers/index.html">
-      <img src="tubejumpers/img/icon.png" alt="Tube Jumpers">
+      <img src="tubejumpers/img/icon.jpg" alt="Tube Jumpers">
       <div class="game-title">Tube Jumpers</div>
     </a>
   </div>
