--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>CELEX - Juegos</title>
+  <title>holameaburro</title>
   <style>
     * {
       box-sizing: border-box;
@@ -188,7 +188,7 @@
     </div>
   </div>
 
-  <h1>CELEX - Juegos</h1>
+  <h1>1 horica e tardado</h1>
 
   <div class="search-container">
     <input type="text" id="searchInput" placeholder="Buscar juegos..." onkeyup="searchGames()">
