Change login credentials for user authentication

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       const pass = document.getElementById("password").value;
       const errorDiv = document.getElementById("loginError");
 
-      if (user === "admin" && pass === "1234") {
+      if (user === "sami.ishot" && pass === "samisam") {
         document.getElementById("loginContainer").style.display = "none";
         const today = new Date();
         localStorage.setItem("creationDate", today.toLocaleDateString());
