--- a/snowrider3d/index.html
+++ b/snowrider3d/index.html
@@ -11,7 +11,7 @@
 		</script>
 	
 		<meta charset="utf-8">
-		<title>Snow Rider 3D | Seraph</title>
+		<title>Dick Rider 3D | Seraph</title>
 		<link href="../../images/ico.ico" rel="shortcut icon">
 		<script src="../../storage/js/cloak.js"></script>
 
@@ -20,7 +20,7 @@
 		<script src="UnityProgress.js"></script>
 		<script src="UnityLoader.js"></script>
 		<script>
-			var gameInstance = UnityLoader.instantiate("gameContainer", "SnowRider3D-gd-1.json", {
+			var gameInstance = UnityLoader.instantiate("gameContainer", "Rider3D-gd-1.json", {
 				onProgress: UnityProgress,
 				Module: {
 					onRuntimeInitialized: function () {
