Update title and premium status in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>holameaburro</title>
+  <title>samigoontown</title>
   <style>
     * {
       box-sizing: border-box;
@@ -175,7 +175,7 @@
     <h3>Información de usuario</h3>
     <p><strong>Usuario:</strong> admin</p>
     <p><strong>Fecha de creación:</strong> <span id="creationDate"></span></p>
-    <p><strong>Premium:</strong> No</p>
+    <p><strong>Premium:</strong> Yes</p>
   </div>
 
   <div class="login-container" id="loginContainer">
